--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,7 +3,7 @@
 one:
   title: MyString
   description: MyText
-  image_url: MyString
+  image_url: image1.gif
   price: 9.99
 
 two:
@@ -11,3 +11,10 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+
+three:
+  title: Title1
+  description:
+  image_url: image.jpg
+  price: 1.2
+
